tests/parse_print/random_perturb/set01/change-05/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/change-05/change-05.essence line 3, column 21:
Unsupported attributes for set: sizM
Only these are supported: size, minSize, maxSize
    line 3, column 21
    find x : set (sizM 2) of int(1..3)
                     ^^^^^^^